@@ -20,7 +20,6 @@
 package org.zaproxy.zap.extension.pscanrules;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -72,16 +71,16 @@ public class ContentSecurityPolicyScanRule extends PluginPassiveScanner
 
     // Per:
     // https://developers.google.com/web/fundamentals/security/csp#policy_applies_to_a_wide_variety_of_resources as of 20200618
+    // 20250131 "base-uri" is not included. Per MDN if it isn't specified then the <base> value is
+    // used, if no base value then location.href "plugin-types" is not included, the directive has
+    // been deprecated. "report-uri" is not included as it has no literal impact. "sandbox" does not
+    // fallback, but excluding it does not necessarily make anything 'more' vulnerable, it's use
+    // simply allows more detailed control of what embedded content can do.
     private static final List<String> DIRECTIVES_WITHOUT_FALLBACK =
-            Arrays.asList(
-                    "base-uri",
-                    "form-action",
-                    "frame-ancestors",
-                    "plugin-types",
-                    "report-uri",
-                    "sandbox");
+            List.of("form-action", "frame-ancestors");
+
     private static final List<String> ALLOWED_DIRECTIVES =
-            Arrays.asList(
+            List.of(
                     // TODO: Remove once https://github.com/shapesecurity/salvation/issues/232 is
                     // addressed
                     "require-trusted-types-for", "trusted-types");
@@ -376,7 +375,7 @@ public class ContentSecurityPolicyScanRule extends PluginPassiveScanner
         return false;
     }
 
-    private String getCspNoticesString(List<PolicyError> notices) {
+    private static String getCspNoticesString(List<PolicyError> notices) {
         if (notices.isEmpty()) {
             return "";
         }
@@ -431,7 +430,7 @@ public class ContentSecurityPolicyScanRule extends PluginPassiveScanner
      * @param header The header field(s) to be found
      * @return list of the matched headers
      */
-    private List<String> getHeaderField(HttpMessage msg, String header) {
+    private static List<String> getHeaderField(HttpMessage msg, String header) {
         List<String> matchedHeaders = new ArrayList<>();
         String headers = msg.getResponseHeader().toString();
         String[] headerElements = headers.split("\\r\\n");
@@ -446,7 +445,7 @@ public class ContentSecurityPolicyScanRule extends PluginPassiveScanner
         return matchedHeaders;
     }
 
-    private List<String> getAllowedWildcardSources(String policyText) {
+    private static List<String> getAllowedWildcardSources(String policyText) {
 
         List<String> allowedSources = new ArrayList<>();
         Policy pol = Policy.parseSerializedCSP(policyText, PolicyErrorConsumer.ignored);
@@ -550,25 +549,9 @@ public class ContentSecurityPolicyScanRule extends PluginPassiveScanner
         return Constant.messages.getString(MESSAGE_PREFIX + "name");
     }
 
-    public String getSolution() {
-        return Constant.messages.getString(MESSAGE_PREFIX + "soln");
-    }
-
-    public String getReference() {
-        return Constant.messages.getString(MESSAGE_PREFIX + "refs");
-    }
-
     @Override
     public Map<String, String> getAlertTags() {
         return ALERT_TAGS;
-    }
-
-    public int getCweId() {
-        return 693; // CWE-693: Protection Mechanism Failure
-    }
-
-    public int getWascId() {
-        return 15; // WASC-15: Application Misconfiguration
     }
 
     private AlertBuilder getBuilder(String name, String alertRef) {
@@ -577,10 +560,10 @@ public class ContentSecurityPolicyScanRule extends PluginPassiveScanner
                 .setName(alertName)
                 .setConfidence(Alert.CONFIDENCE_HIGH)
                 .setDescription(Constant.messages.getString(MESSAGE_PREFIX + "desc"))
-                .setSolution(getSolution())
-                .setReference(getReference())
-                .setCweId(getCweId())
-                .setWascId(getWascId())
+                .setSolution(Constant.messages.getString(MESSAGE_PREFIX + "soln"))
+                .setReference(Constant.messages.getString(MESSAGE_PREFIX + "refs"))
+                .setCweId(693) // CWE-693: Protection Mechanism Failure
+                .setWascId(15) // WASC-15: Application Misconfiguration
                 .setAlertRef(PLUGIN_ID + "-" + alertRef);
     }
 
